syntax = "proto3";

package manager;

option go_package = "subliker.manager.v1;managerv1";

import "google/protobuf/empty.proto";

service Manager {
    rpc Register (RegisterRequest) returns (google.protobuf.Empty);
    rpc GetInfo (GetInfoRequest) returns (GetInfoResponse);
}

message RegisterRequest {
    int64 manager_telegram_id = 1;
    string manager_full_name = 2;
    string manager_email = 3;
    optional string manager_phone_number = 4;
    optional string manager_company = 5;
}

message GetInfoRequest {
    int64 user_telegram_id = 1;
}

message GetInfoResponse {
    string user_full_name = 2;
    optional string user_phone_number = 3;
}
